crates/rv-lockfile/tests/snapshots/lockfile_fixtures_tests__fixture_checksum_enabled.snap
---
source: crates/rv-lockfile/tests/lockfile_fixtures_tests.rs
expression: parser
---
LockfileParser {
    sources: [
        Gem(
            GemSource {
                remotes: [
                    "https://rubygems.org/",
                ],
                specs: [
                    "minitest",
                ],
            },
        ),
    ],
    specs: {
        "minitest (5.16.3)": LazySpecification {
            name: "minitest",
            version: Version {
                major: 5,
                minor: 16,
                patch: 3,
            },
            platform: Ruby,
            source: None,
            dependencies: [],
            checksum: None,
            required_ruby_version: None,
            required_rubygems_version: None,
        },
    },
    dependencies: {
        "minitest": Dependency {
            name: "minitest",
            requirements: [],
            platforms: [],
            source: None,
            pinned: false,
        },
    },
    platforms: [
        Ruby,
    ],
    bundler_version: Some(
        Version {
            major: 2,
            minor: 5,
            patch: 0,
        },
    ),
    ruby_version: None,
    checksums: {
        "minitest-5.16.3": Checksum {
            name: "minitest",
            version: Version {
                major: 5,
                minor: 16,
                patch: 3,
            },
            platform: None,
            algorithm: "sha256",
            value: "3c8fb073e5353d086d12af3a8822ef7e4dc1df3a5de1a1b1b48c6ed59d1de7fc",
        },
    },
    strict: false,
}
