crates/rv-lockfile/tests/snapshots/lockfile_fixtures_tests__fixture_empty.snap
---
source: crates/rv-lockfile/tests/lockfile_fixtures_tests.rs
expression: parser
---
LockfileParser {
    sources: [],
    specs: {},
    dependencies: {},
    platforms: [],
    bundler_version: None,
    ruby_version: None,
    checksums_enabled: false,
    checksums: {},
    strict: false,
}
