crates/rv-lockfile/tests/snapshots/lockfile_fixtures_tests__fixture_minimal_strict.snap
---
source: crates/rv-lockfile/tests/lockfile_fixtures_tests.rs
expression: parser
---
LockfileParser {
    sources: [],
    specs: {},
    dependencies: {},
    platforms: [
        Ruby,
    ],
    bundler_version: Some(
        Version {
            major: 2,
            minor: 3,
            patch: 0,
        },
    ),
    ruby_version: None,
    checksums_enabled: false,
    checksums: {},
    strict: true,
}
